Bug 993290 - Respond OK after receiving ATDxxx and improve readability on ProcessDialCall(). r=echou, a=1.4+